# WickedEngine

./: CMakeLists.txt
Editor/: CMakeLists.txt  Editor.cpp  main_SDL2.cpp
WickedEngine/: wiHelper.cpp  wiRenderer.cpp
